formatting bug on ios

--- a/static/css/control.css
+++ b/static/css/control.css
@@ -2031,13 +2031,6 @@ top:-1px;
     
 }
 
-.product-editor-container{
-    width:75%;
-}
-
-.customer-editor-container{
-    width:75%;
-}
 
 
 
@@ -2046,14 +2039,6 @@ top:-1px;
 
 }
 
-.order-details-container{
-    width:75%;
-}
-
-
-.order-fulfillment-container{
-    width:75%;
-}
 
 
 
